--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@
     
   section {
     padding: 40px;
+    padding-bottom: 0;
   }
   .bg-img {
     height: 440px;
@@ -116,3 +117,255 @@
     border-radius: 7px;
     cursor: pointer;
   }
+  .boxs{
+    display: flex;
+    margin-left: 35px;
+  }
+  .box{
+    margin-right: 55px;
+    width: 80px;
+  }
+  .box:hover{
+    background: radial-gradient(63.44% 63.44% at 50% 50%, #c2ffe2 0, white 100%), #fff;
+    cursor: auto;
+  }
+
+  .imge img {
+    width: 30px;
+  }
+  .card{
+    background: #1E8347;
+    max-width: 140px;
+    height: 170px;
+    padding-top: 15px;
+    margin-right: 10px;
+    border-radius: 3px;
+  }
+  .pop{
+    display: flex;
+  }
+  .box1 {
+    padding-left: 5px;
+    padding-top: 8px;
+    border: 1px solid rgb(167, 167, 167);
+    width: 110px;
+    /* border: 1px solid red; */
+    margin-right: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 8px;
+    font-weight: 400px;
+  }
+  .box1:hover{
+    border:2px solid rgb(0, 0, 0);
+    filter: drop-shadow(-1px -1px 5px rgb(10, 248, 2));
+    font-weight: 700;
+  }
+  .he {
+    margin-top: 80px;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: 20px;
+    color: #404145;
+    font-size: 40px;
+    font-weight: 500;
+    letter-spacing: 0.96px;
+    font-size: 50px;
+  }
+  .secont-box {
+    display: grid;
+    /* border: 1px solid red; */
+    grid-template-columns: auto auto auto auto auto auto auto;
+    padding: 15px;
+    margin-top: 30px;
+    /* justify-content: space-between; */
+    height: 200px;
+  }
+  .box2 img{
+    width: 150px;
+    margin-top: 20px;
+    height: 120px;
+  }
+  .box2 {
+    margin-right: 5px;
+    filter: brightness(100%);
+    background-color: green;
+    padding-left: 8px;
+    padding-top: 35px;
+    margin-bottom: 10px;
+    border: 1px solid rgb(167, 167, 167);
+    width: 155px;
+    height: 200px;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 10px;
+    color: white;
+    font-weight: 600;
+  }
+  .box2:hover{
+    filter: brightness(115%);
+  }
+  .secound-colum {
+    /* border: 1px solid rgb(255, 0, 0); */
+    height: 680px;
+    display: grid;
+    grid-template-columns: auto auto;
+    justify-content: center;
+    background-color: #e8faf4;
+    padding: 20px;
+    border-radius: 20px;
+  }
+  .first-row,
+  .second-row {
+    background-color: #e8faf7;
+  }
+  .first-row {
+    width: 620px;
+  }
+  .fiver-pro {
+    width: 200px;
+    height: 150px;
+    /* border: 1px solid #0c19ca; */
+    margin-left: 9px;
+  }
+  .first-row-first-heading {
+    /* border: 1px solid #0c19ca; */
+    margin-left: 35px;
+    width: 550px;
+    font-size: 50px;
+    font-weight: 600;
+    font-family: Helvetica, sans-serif;
+    letter-spacing: -0.04em;
+    color: #222325;
+  }
+  .boxes {
+    /* border: 1px solid #0c19ca; */
+    margin-top: 10px;
+    display: inline-block;
+    width: 250px;
+    margin-left: 35px;
+  }
+  .boxes-h {
+    /* border: 1px solid #0c19ca; */
+    font-weight: 600;
+    font-family: Helvetica, sans-serif;
+    color: #222325;
+  }
+  .boxes-p {
+    /* border: 1px solid #0c19ca; */
+    color: #222325;
+    margin-top: 7px;
+    font-weight: 500;
+    font-size: 15px;
+    font-family: Helvetica, sans-serif;
+  }
+  .boxes-tick-mark {
+    height: 20px;
+  }
+  .try-now {
+    font-family: Helvetica, sans-serif;
+    height: 50px;
+    width: 100px;
+    border-radius: 8px;
+    margin-top: 40px;
+    margin-left: 30px;
+    background-color: #222325;
+    color: white;
+    font-weight: 900;
+  }
+  .try-now:hover{
+    border:5px solid rgb(10, 10, 10);
+    filter: drop-shadow(-1px -1px 15px rgb(1, 56, 1));
+    font-weight: bolder;
+  }
+  .second-row {
+    width: 600px;
+  }
+  .fiverr-pro {
+    margin-top: 150px;
+    width: 90%;
+  }
+  .what-success {
+    font-family: Helvetica, sans-serif;
+    /* border: 1px solid #0c19ca; */
+    font-weight: 500;
+    padding: 30px;
+    color: #222325;
+    font-size: 35px;
+  }
+  .vontelle-eyewear {
+    /* border: 1px solid #0c19ca; */
+    font-family: Helvetica, sans-serif;
+    margin-left: 30px;
+    font-size: 15px;
+    font-weight: 500;
+    color: #222325;
+  }
+  .video-how-fiverr-word {
+    border: 2px solid rgb(180, 178, 178);
+    padding: 10px;
+    border-radius: 20px;
+    margin-top: 30px;
+    height: 500px;
+    width: 1100px;
+  }
+
+.footer {
+  background-color: #f1f1f1;
+  padding: 40px 0;
+  color: #333;
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.footer-section {
+  flex: 1;
+  margin: 0 20px;
+  min-width: 200px;
+}
+
+.footer-section h4 {
+  margin-bottom: 10px;
+  font-size: 18px;
+}
+
+.footer-section ul {
+  list-style: none;
+  padding: 0;
+}
+
+.footer-section ul li {
+  margin-bottom: 8px;
+}
+
+.footer-section ul li a {
+  text-decoration: none;
+  color: #333;
+}
+
+.footer-section ul li a:hover {
+  text-decoration: underline;
+}
+
+.social-links {
+  display: flex;
+  gap: 10px;
+}
+
+.social-links img {
+  width: 24px;
+  height: 24px;
+}
+
+.footer-bottom {
+  text-align: center;
+  padding: 20px 0;
+  background-color: #ddd;
+  margin-top: 20px;
+}
+
+.footer-bottom p {
+  margin: 0;
+  font-size: 14px;
+}
